--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="buscar_invitaci_n">Buscar Invitación</string>
     <string name="buscar_invitacion">Buscar Invitación</string>
     <string name="cerrar">Cerrar</string>
-    <string name="correo_jefe"><a href="juanandrade@tecuruapan.edu.mx">Google</a></string>
+    <string name="correo_jefe">juanandrade@tecuruapan.edu.mx</string>
 </resources>
