--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GraduationITSUCreateQRs</string>
+    <string name="app_name">Graduación ITSU</string>
     <string name="imagen_de_codigo_qr">imagen de codigo qr</string>
     <string name="guardar_invitaci_n">Guardar Invitación</string>
     <string name="n_mero_de_control">Número de control</string>
