--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="buscar_invitacion">Buscar Invitación</string>
     <string name="cerrar">Cerrar</string>
     <string name="correo_jefe">juanandrade@tecuruapan.edu.mx</string>
+    <string name="acerca_de">Acerca de</string>
 </resources>
